--- a/Image_Classifier_Project_submitted.ipynb
+++ b/Image_Classifier_Project_submitted.ipynb
@@ -76,10 +76,10 @@
       "metadata": {
         "id": "grmtWeEX1P3o",
         "colab_type": "code",
-        "outputId": "612c9b87-96c2-4afa-9372-94529eaad01f",
+        "outputId": "827ebee9-95bf-4f13-9ec8-87677c732bee",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 128
+          "height": 55
         }
       },
       "source": [
@@ -87,16 +87,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -121,10 +117,10 @@
       "metadata": {
         "id": "4IX8JftM5ZLy",
         "colab_type": "code",
-        "outputId": "1a46c863-d2b6-4623-e469-ca42978771b0",
+        "outputId": "b796a251-bf6e-4221-a90a-1b4521a5f6ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 55
+          "height": 92
         }
       },
       "source": [
@@ -140,12 +136,14 @@
         "!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.4.1-{platform}-linux_x86_64.whl torchvision\n",
         "import torch"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "tcmalloc: large alloc 1073750016 bytes == 0x5787e000 @  0x7f7fb68ed2a4 0x591a07 0x5b5d56 0x502e9a 0x506859 0x502209 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x507641 0x502209 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x507641 0x504c28 0x502540 0x502f3d 0x507641\n"
+            "\u001b[31m  ERROR: HTTP error 403 while getting http://download.pytorch.org/whl/cu100/torch-0.4.1-cp36-cp36m-linux_x86_64.whl\u001b[0m\n",
+            "\u001b[31m  ERROR: Could not install requirement torch==0.4.1 from http://download.pytorch.org/whl/cu100/torch-0.4.1-cp36-cp36m-linux_x86_64.whl because of error 403 Client Error: Forbidden for url: http://download.pytorch.org/whl/cu100/torch-0.4.1-cp36-cp36m-linux_x86_64.whl\u001b[0m\n",
+            "\u001b[31mERROR: Could not install requirement torch==0.4.1 from http://download.pytorch.org/whl/cu100/torch-0.4.1-cp36-cp36m-linux_x86_64.whl because of HTTP error 403 Client Error: Forbidden for url: http://download.pytorch.org/whl/cu100/torch-0.4.1-cp36-cp36m-linux_x86_64.whl for URL http://download.pytorch.org/whl/cu100/torch-0.4.1-cp36-cp36m-linux_x86_64.whl\u001b[0m\n"
           ],
           "name": "stdout"
         }
@@ -196,10 +194,10 @@
       "metadata": {
         "id": "a6WqsETVV-_B",
         "colab_type": "code",
-        "outputId": "b1a09abf-1257-4054-854d-80024bc9522b",
+        "outputId": "db1577a5-10e4-4fdd-88da-4bf42634a899",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 165
+          "height": 290
         }
       },
       "source": [
@@ -214,18 +212,41 @@
         "# this should print 5.3.0. If it doesn't, then restart your runtime:\n",
         "# Menu > Runtime > Restart Runtime"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Uninstalling Pillow-5.3.0:\n",
-            "  Successfully uninstalled Pillow-5.3.0\n",
+            "Uninstalling Pillow-4.3.0:\n",
+            "  Successfully uninstalled Pillow-4.3.0\n",
             "Collecting Pillow==5.3.0\n",
-            "  Using cached https://files.pythonhosted.org/packages/62/94/5430ebaa83f91cc7a9f687ff5238e26164a779cca2ef9903232268b0a318/Pillow-5.3.0-cp36-cp36m-manylinux1_x86_64.whl\n",
-            "Installing collected packages: Pillow\n",
-            "Successfully installed Pillow-5.3.0\n",
-            "4.0.0\n"
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/62/94/5430ebaa83f91cc7a9f687ff5238e26164a779cca2ef9903232268b0a318/Pillow-5.3.0-cp36-cp36m-manylinux1_x86_64.whl (2.0MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.0MB 2.8MB/s \n",
+            "\u001b[31mERROR: albumentations 0.1.12 has requirement imgaug<0.2.7,>=0.2.5, but you'll have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: Pillow\n",
+            "Successfully installed Pillow-5.3.0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "PIL"
+                ]
+              }
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "4.3.0\n"
           ],
           "name": "stdout"
         }
